--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sngrl/sphinxsearch6",
+  "name": "codeturn/sphinxsearch6",
   "description": "Laravel package to query Sphinxsearch in Laravel 5",
   "keywords": [
     "sphinx",
